--- a/build.gradle
+++ b/build.gradle
@@ -1,19 +1,19 @@
 buildscript {
-   repositories {
-    mavenCentral()
-}
-
-
+    repositories {
+        mavenCentral()
+    }
     dependencies {
         classpath 'org.akhikhl.gretty:gretty:+'
     }
 }
 
-apply plugin: 'java'
-apply plugin: 'eclipse'
-apply plugin: 'idea'
-apply plugin: 'war'
-apply plugin: 'org.akhikhl.gretty'
+plugins {
+    id 'java'
+    id 'war'
+    id 'eclipse'
+    id 'idea'
+    id 'org.akhikhl.gretty'
+}
 
 version = "1.1"
 
@@ -24,44 +24,39 @@ repositories {
 }
 
 dependencies {
-    compile 'org.slf4j:slf4j-api:1.7.25'
-    compile group: 'ch.qos.logback', name: 'logback-classic', version: '1.2.3'
-
-    providedCompile group: 'javax.servlet', name: 'javax.servlet-api', version: '3.1.0'
-
-    testCompile group: 'org.testng', name: 'testng', version: '6.9.13.6'
+    implementation 'org.slf4j:slf4j-api:1.7.25'
+    implementation 'ch.qos.logback:logback-classic:1.2.3'
+    providedCompile 'javax.servlet:javax.servlet-api:3.1.0'
+    testImplementation 'org.testng:testng:6.9.13.6' // Fixed here
 }
 
 gretty {
-    // supported values:
-    // 'jetty7', 'jetty8', 'jetty9', 'jetty93', 'jetty94', 'tomcat7', 'tomcat8'
     servletContainer = 'jetty9'
     httpPort = 8080
     contextPath = '/gradle-war'
 }
 
 war {
-    archiveName 'gradle-war.war'
+    archiveFileName = 'gradle-war.war' // Fixed here
 }
 
 test {
     testLogging {
-        // show standard out and standard error of the test JVM(s) on the console
         showStandardStreams = true
         exceptionFormat = 'full'
     }
-    useTestNG() {
+    useTestNG {
         excludeGroups 'integration'
     }
 }
 
-task integrationTest(type: Test, dependsOn: 'test') {
+tasks.register('integrationTest', Test) {
+    dependsOn test
     testLogging {
-        // show standard out and standard error of the test JVM(s) on the console
         showStandardStreams = true
         exceptionFormat = 'full'
     }
-    useTestNG() {
+    useTestNG {
         includeGroups 'integration'
     }
 }
